<resources>
    <string name="app_name">testApp</string>
    <string name="click_button">Click button</string>
    <string name="textview">TextView</string>
    <string name="buttongg">Button</string>
    <string name="button1">Button</string>
    <string name="bottom_button">bottom button</string>
    <string name="left_button">left button</string>
    <string name="button12">Button</string>
    <string name="go_to_game">Go to game</string>
    <string name="game_activity_here">game activity here</string>
    <string name="buttonp">Button</string>
    <string name="set_text">set text</string>
    <string name="textview2">TextView</string>
    <string name="check">CHECK</string>
    <string name="answer">answer</string>
    <string name="start">START</string>
    <string name="textviewfg">TextView</string>
    <string name="correct_calculatio">correct calculatio</string>
</resources>
