<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:text="@string/textview"
            android:textSize="30sp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/randomNumberTxtView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:textAlignment="center" tools:text="dfdfd"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/userAnswerNo"
            android:hint="@string/answer" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/randomNumberTxtView"
            android:autofillHints=""/>
    <Button
            android:text="@string/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCheck" android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/userAnswerNo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewCorrect" app:layout_constraintEnd_toStartOf="@+id/txtViewIncorrect"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="196dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.452" android:text="correct"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewIncorrect" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="140dp" android:layout_marginBottom="196dp"
            app:layout_constraintBottom_toBottomOf="parent" android:text="incorrect"/>
</android.support.constraint.ConstraintLayout>