<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_game2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next_game2" android:layout_marginTop="360dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/textviewfg"
            android:layout_height="35dp"
            android:id="@+id/txtView_instruction_game2"
            android:textSize="20sp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/btn_start_game2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_width="0dp" android:textAlignment="center" tools:text="Click Start"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/txtView_instruction_game2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:autofillHints=""
            android:hint="@string/correct_calculatio" tools:targetApi="o" android:textAlignment="center"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:id="@+id/txtView_done_game2" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_next_game2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>